# sql_to_clickhouse_guide

./: .gitignore  README.md  pyproject.toml
guide/: 0_checking_data_structure.ipynb  0_datasets_check.ipynb  1_basic_aggregation.ipynb
nbs/: 1_basic_aggregation.ipynb
