[tool.poetry]
name = "sql_to_clickhouse"
version = "0.1.0"
description = "SQL to Clickhouse SQL guide"
authors = ["Aleksandr Kurkin <sqweptic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "1.3.16"
sqlalchemy-clickhouse = "0.1.5.post0"
jupyter = "1.0.0"
ipython-sql = "0.3.9"
ipykernel = "5.2.1"
pandas = "1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
